--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -3,6 +3,7 @@
 
 .sctn4{
     margin-top: -2rem;
+    height: 70vh;
 
     .form{
         background-color: white;
@@ -396,7 +397,7 @@
 
         
         top: 5%;
-        right: -58%;
+        right: -60%;
         // animation: leaves_sct4 20s alternate infinite ease-in;
         // transform-origin: center top;
         
