--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -103,6 +103,7 @@
         .lluviaSobres{
             color: $text-color;
             font-family: $work-sans;
+            font-weight: 300;
             z-index: 100;
             background-color: white;
             text-align: center;
@@ -119,9 +120,13 @@
             }
 
             .lluviaTitle{
-
-                margin-bottom: .75rem;
-                font-weight: 400;
+                margin-bottom: 2.125rem;
+                width: 100%;
+                padding: .5rem 1rem;
+                background-color: #f3adb9;
+                // background-color: #af415375;
+                font-weight: 300;
+                text-align: center;
                 font-size: 1.5rem;
             }
             .lluviaText{
@@ -330,4 +335,311 @@
 //         transform: rotate(186deg);
 //     }
 // }
+@media screen and (min-width:400px) {
+    .sctn3{
+        margin-top: 0rem;
 
+        .sc3{
+            display: grid;
+            place-items: center;
+            gap: 1.75rem;
+            // margin-top: -5rem;
+    
+            .content_sect3{
+
+                width: 75%;
+                // padding: 2rem 1rem;
+                // opacity: 0;
+        
+                .dress_icon{
+                    max-width: 20%;
+                    fill: #202020;
+        
+                }
+        
+                .dresscode{
+                    margin-bottom: 2.125rem;
+                    width: 100%;
+                    padding: .5rem 1rem;
+                    background-color: #f3adb9;
+                    // background-color: #af415375;
+                    font-weight: 300;
+                    text-align: center;
+                    font-size: 1.75rem;
+                }
+        
+                .half{
+                    // display: grid;
+                    // grid-auto-flow: column;
+                    width: 100%;
+                    margin-top: 2rem;
+        
+                    .men, .women{
+
+                        ul{
+                            padding: 0;
+
+                            h3{
+                                margin-bottom: .75rem;
+                                font-size: 1.5rem;
+                            }
+                        }
+                        li{
+                            font-size: 1.25rem;
+                        }
+                    }
+                }
+                h3{
+                    font-size: 1.25rem;
+                }
+                .reserva_color{
+                    margin-top: 2.25rem;
+                }
+                
+            
+            }
+        
+            .lluviaSobres{
+                width: 75%;;
+                padding: 2rem 1rem;
+                .envelope{
+                    width: 2.75rem;
+                    padding: .5rem 0 .5rem;
+                }
+    
+                .lluviaTitle{ 
+                    margin-bottom: .75rem;
+                    font-size: 1.75rem;
+                }
+                .lluviaText{
+                    font-weight: 300;
+                    font-size: 1.125rem;
+    
+                    .lluviaSpan{
+                        margin-top: .5rem;
+                    }
+                }
+        
+            }
+        }
+           
+        .f-s3_3{
+            width: 40%;
+        }
+         
+        .f-s3_4{
+            width: 20%;
+        }  
+        .sctn-3_flowers{
+            width: 40%;  
+        }
+    }
+}
+
+
+@media screen and (min-width:600px) {
+    .sctn3{
+        margin-top: 0rem;
+
+        .sc3{
+            display: grid;
+            place-items: center;
+            gap: 1.75rem;
+            // margin-top: -5rem;
+    
+            .content_sect3{
+
+                width: 65%;
+                // padding: 2rem 1rem;
+                // opacity: 0;
+        
+                .dress_icon{
+                    max-width: 17%;
+                    fill: #202020;
+        
+                }
+        
+                .dresscode{
+                    margin-bottom: 2.125rem;
+                    width: 100%;
+                    padding: .5rem 1rem;
+                    background-color: #f3adb9;
+                    // background-color: #af415375;
+                    font-weight: 300;
+                    text-align: center;
+                    font-size: 1.75rem;
+                }
+        
+                .half{
+                    // display: grid;
+                    // grid-auto-flow: column;
+                    width: 100%;
+                    margin-top: 2rem;
+        
+                    .men, .women{
+
+                        ul{
+                            padding: 0;
+
+                            h3{
+                                margin-bottom: .75rem;
+                                font-size: 1.5rem;
+                            }
+                        }
+                        li{
+                            font-size: 1.25rem;
+                        }
+                    }
+                }
+                h3{
+                    font-size: 1.25rem;
+                }
+                .reserva_color{
+                    margin-top: 2.25rem;
+                }
+                
+            
+            }
+        
+            .lluviaSobres{
+                width: 60%;;
+                padding: 2rem 1rem;
+                .envelope{
+                    width: 2.75rem;
+                    padding: .5rem 0 .5rem;
+                }
+    
+                .lluviaTitle{ 
+                    margin-bottom: .75rem;
+                    font-size: 1.75rem;
+                }
+                .lluviaText{
+                    font-weight: 300;
+                    font-size: 1.125rem;
+    
+                    .lluviaSpan{
+                        margin-top: .5rem;
+                    }
+                }
+        
+            }
+        }
+           
+        .f-s3_3{
+            width: 35%;
+        }
+         
+        .f-s3_4{
+            width: 18%;
+        }  
+        .sctn-3_flowers{
+            width: 35%;  
+        }
+    }
+}
+
+@media screen and (min-width:850px) {
+    .sctn3{
+        margin-top: 0rem;
+
+        .sc3{
+            display: grid;
+            grid-auto-flow: column;
+            grid-template-columns: 1fr 1fr;
+            place-items: center;
+            width: 90%;
+            gap: 1.75rem;
+            // margin-top: -5rem;
+    
+            .content_sect3{
+
+                width: 90%;
+                // padding: 2rem 1rem;
+                // opacity: 0;
+        
+                .dress_icon{
+                    max-width: 17%;
+                    fill: #202020;
+        
+                }
+        
+                .dresscode{
+                    margin-bottom: 2.125rem;
+                    width: 100%;
+                    padding: .5rem 1rem;
+                    background-color: #f3adb9;
+                    // background-color: #af415375;
+                    font-weight: 300;
+                    text-align: center;
+                    font-size: 1.75rem;
+                }
+        
+                .half{
+                    // display: grid;
+                    // grid-auto-flow: column;
+                    width: 100%;
+                    margin-top: 2rem;
+        
+                    .men, .women{
+
+                        ul{
+                            padding: 0;
+
+                            h3{
+                                margin-bottom: .75rem;
+                                font-size: 1.5rem;
+                            }
+                        }
+                        li{
+                            font-size: 1.25rem;
+                        }
+                    }
+                }
+                h3{
+                    font-size: 1.25rem;
+                }
+                .reserva_color{
+                    margin-top: 2.25rem;
+                }
+                
+            
+            }
+        
+            .lluviaSobres{
+                height: 100%;
+                width: 90%;;
+                padding: 2rem 1rem;
+                .envelope{
+                    width: 2.75rem;
+                    padding: .5rem 0 .5rem;
+                }
+    
+                .lluviaTitle{ 
+                    margin-bottom: .75rem;
+                    font-size: 1.75rem;
+                }
+                .lluviaText{
+                    margin-top: 1rem;
+                    font-weight: 300;
+                    font-size: 1.125rem;
+    
+                    .lluviaSpan{
+                        margin-top: 1rem;
+                    }
+                }
+        
+            }
+        }
+           
+        .f-s3_3{
+            width: 30%;
+        }
+         
+        .f-s3_4{
+            width: 13%;
+        }  
+        .sctn-3_flowers{
+            width: 30%;  
+        }
+    }
+}
