--- a/src/style/sass/main_components/section4.scss
+++ b/src/style/sass/main_components/section4.scss
@@ -484,3 +484,206 @@
         transform: rotate(-3deg);
     }
 }
+
+
+@media screen and (min-width:500px) {
+    .sctn4{
+        margin-top: 0rem;
+        height: 70vh;
+    
+        .form{
+            width: 75%;
+            padding: 4.5rem 1rem;
+            gap: 2.75rem  1.5rem;
+    
+            .messageImg{
+                width: 70%;
+            }
+    
+            .form_title{
+                font-size: 1.65rem;            
+            }
+    
+            .singlePerson{
+                .onlyNameGuest{
+                    font-size: 1.75rem;
+                }
+    
+                .btn-single_person{
+                    width: 70%;
+                    font-size: 1.25rem;
+                    padding: .75rem 1rem;    
+                }
+                
+                        .check{
+                            display: grid;
+                            place-items: center;
+                            margin-top: 2rem;
+                
+                            .form_description{
+                            
+                                display: block;
+                                text-transform: lowercase;
+                                width: 95%;
+                                text-align: center;
+                                margin-bottom: .75rem;
+                    
+                                &::first-letter{
+                                    text-transform: uppercase;
+                                }
+                    
+                            }
+                
+                            .selection-number{  // thi is a button
+                                // display: inline-block;
+                                margin-top: 2rem;
+                                text-decoration: none;
+                                text-transform: uppercase;
+                                background-color: $pink;
+                                font-family: $work-sans;
+                                width: 70%;
+                                font-size: 1.25rem;
+                                color: $text-color;
+                                text-align: center;
+                                padding: .75rem 1rem;
+                                cursor: pointer;
+                                transition: .5s ease-in;
+                                &:hover{
+                                    background-color: $text-color;
+                                    color: white;
+                        
+                                }
+                            }
+                
+                        }
+                
+                        .hide-checkMark{
+                            display:none;
+                        }
+                
+                
+                        .type-list{
+                            display: grid;
+                            place-items: center;
+                
+                            .goBack{
+                                display: grid;
+                                place-items: center;
+                                background-color: $pink;
+                                padding: .5rem;
+                                border-radius: 50%;
+                                margin-bottom: 1.5rem;
+                                .arrow{
+                                    width: 2rem;
+                                    height: 2rem;
+                                    fill: #202020;
+                                }
+                
+                            }
+                
+                
+                            .list-people{
+                                display: block;
+                                text-transform: lowercase;
+                                width: 95%;
+                                text-align: center;
+                                margin-bottom: .75rem;
+                    
+                                &::first-letter{
+                                    text-transform: uppercase;
+                                }
+                            }
+                
+                            .list-name{
+                                display: grid;
+                                place-items: center;
+                                gap: 1.25rem;
+                                
+                                .guest1{
+                                    text-transform: capitalize;
+                                    font-size: 1rem;
+                                    height: 2rem;
+                                    width: 15.35rem;
+                                }
+                            }
+                                
+                            .btn-confirm{
+                                all: unset;
+                                margin-top: 2rem;
+                                background-color: $pink;
+                                font-family: $work-sans;
+                                width: 70%;
+                                font-size: 1.25rem;
+                                // color:$text-color;
+                                text-align: center;
+                                padding: .75rem 1rem;
+                                cursor: pointer;
+                                transition: .5s ease-in;
+                                &:hover{
+                                    background-color: $text-color;
+                                    color: white;
+                                }
+                            }
+                        }
+                
+                        .lst-hide{
+                            // visibility: hidden;
+                            display: none;
+                        }
+                        
+                        // .lst-show{
+                            // visibility: visible;
+                        // }
+            }
+        }
+        .flower-container-2{
+            width: 15%;
+            bottom: -10%;
+            left: 5%;
+        }
+        
+        .sctn-2_flowers{
+            width: 35%;
+            bottom: 0;
+            right: -4%;
+        }
+        .up_flower{
+            width: 80%;
+            position: absolute;
+            transform: rotateZ(20deg);
+            top: 5%;
+            right: -53%;
+        }
+    
+        .veryPink{
+            width: 50%;
+            opacity: 0;
+            position: absolute;
+            right: -35%;
+            bottom: -2%;
+        }
+        .veryPink2{
+            width: 70%;
+            opacity: 0;
+            position: absolute;
+            left: -10%;
+            bottom: 2%;
+        }
+        .veryPink3{
+            opacity: 0;
+            width: 60%;
+
+            left: -20%;
+            top: 2%;
+        }
+        .veryPink4{
+            opacity: 0;
+            width: 65%;
+            z-index:1;
+            position: absolute;
+            right: -20%;
+            top: -2%;
+            // opacity: .9;
+        }
+    }
+}
