--- a/src/style/css/main.css
+++ b/src/style/css/main.css
@@ -1659,14 +1659,12 @@ li {
   position: absolute;
   right: -40%;
   bottom: -2%;
-  opacity: 0.9;
 }
 .sctn4 .veryPink2 {
   opacity: 0;
   position: absolute;
   left: -30%;
   bottom: 2%;
-  opacity: 0.9;
 }
 .sctn4 .veryPink3 {
   opacity: 0;
@@ -1675,7 +1673,6 @@ li {
   position: absolute;
   left: -20%;
   top: 2%;
-  opacity: 0.9;
 }
 .sctn4 .veryPink4 {
   opacity: 0;
@@ -1726,43 +1723,14 @@ li {
   .sctn4 .form .singlePerson .onlyNameGuest {
     font-size: 1.75rem;
   }
-  .sctn4 .form .singlePerson .btn-single_person {
-    width: 70%;
-    font-size: 1.25rem;
-    padding: 0.75rem 1rem;
-  }
-  .sctn4 .form .singlePerson .check {
-    display: grid;
-    place-items: center;
-    margin-top: 2rem;
-  }
   .sctn4 .form .singlePerson .check .form_description {
-    display: block;
-    text-transform: lowercase;
-    width: 95%;
-    text-align: center;
-    margin-bottom: 0.75rem;
-  }
-  .sctn4 .form .singlePerson .check .form_description::first-letter {
-    text-transform: uppercase;
+    font-size: 1.25rem;
   }
   .sctn4 .form .singlePerson .check .selection-number {
     margin-top: 2rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    background-color: #f3adb9;
-    font-family: "Work Sans";
     width: 70%;
     font-size: 1.25rem;
-    color: #3f3f3f;
-    text-align: center;
     padding: 0.75rem 1rem;
-    cursor: pointer;
-    transition: 0.5s ease-in;
-  }
-  .sctn4 .form .singlePerson .check .selection-number:hover {
-    background-color: #3f3f3f;
-    color: white;
   }
   .sctn4 .form .singlePerson .hide-checkMark {
     display: none;
@@ -1772,27 +1740,15 @@ li {
     place-items: center;
   }
   .sctn4 .form .singlePerson .type-list .goBack {
-    display: grid;
-    place-items: center;
-    background-color: #f3adb9;
-    padding: 0.5rem;
-    border-radius: 50%;
     margin-bottom: 1.5rem;
   }
   .sctn4 .form .singlePerson .type-list .goBack .arrow {
     width: 2rem;
     height: 2rem;
-    fill: #202020;
   }
   .sctn4 .form .singlePerson .type-list .list-people {
-    display: block;
-    text-transform: lowercase;
     width: 95%;
-    text-align: center;
     margin-bottom: 0.75rem;
-  }
-  .sctn4 .form .singlePerson .type-list .list-people::first-letter {
-    text-transform: uppercase;
   }
   .sctn4 .form .singlePerson .type-list .list-name {
     display: grid;
@@ -1800,7 +1756,6 @@ li {
     gap: 1.25rem;
   }
   .sctn4 .form .singlePerson .type-list .list-name .guest1 {
-    text-transform: capitalize;
     font-size: 1rem;
     height: 2rem;
     width: 15.35rem;
@@ -1808,18 +1763,9 @@ li {
   .sctn4 .form .singlePerson .type-list .btn-confirm {
     all: unset;
     margin-top: 2rem;
-    background-color: #f3adb9;
-    font-family: "Work Sans";
     width: 70%;
     font-size: 1.25rem;
-    text-align: center;
     padding: 0.75rem 1rem;
-    cursor: pointer;
-    transition: 0.5s ease-in;
-  }
-  .sctn4 .form .singlePerson .type-list .btn-confirm:hover {
-    background-color: #3f3f3f;
-    color: white;
   }
   .sctn4 .form .singlePerson .lst-hide {
     display: none;
@@ -1836,36 +1782,128 @@ li {
   }
   .sctn4 .up_flower {
     width: 80%;
-    position: absolute;
-    transform: rotateZ(20deg);
     top: 5%;
     right: -53%;
   }
   .sctn4 .veryPink {
     width: 50%;
-    opacity: 0;
-    position: absolute;
     right: -35%;
     bottom: -2%;
   }
   .sctn4 .veryPink2 {
     width: 70%;
-    opacity: 0;
-    position: absolute;
     left: -10%;
     bottom: 2%;
   }
   .sctn4 .veryPink3 {
-    opacity: 0;
     width: 60%;
     left: -20%;
     top: 2%;
   }
   .sctn4 .veryPink4 {
-    opacity: 0;
     width: 65%;
-    z-index: 1;
-    position: absolute;
+    right: -20%;
+    top: -2%;
+  }
+}
+@media screen and (min-width: 700px) {
+  .sctn4 {
+    margin-top: 0rem;
+    height: 70vh;
+  }
+  .sctn4 .form {
+    width: 60%;
+    padding: 4.5rem 1rem;
+    gap: 2.75rem 1.5rem;
+  }
+  .sctn4 .form .messageImg {
+    width: 70%;
+  }
+  .sctn4 .form .form_title {
+    font-size: 1.65rem;
+  }
+  .sctn4 .form .singlePerson .onlyNameGuest {
+    font-size: 1.75rem;
+  }
+  .sctn4 .form .singlePerson .check .form_description {
+    font-size: 1.25rem;
+  }
+  .sctn4 .form .singlePerson .check .selection-number {
+    margin-top: 2rem;
+    width: 70%;
+    font-size: 1.25rem;
+    padding: 0.75rem 1rem;
+  }
+  .sctn4 .form .singlePerson .hide-checkMark {
+    display: none;
+  }
+  .sctn4 .form .singlePerson .type-list {
+    display: grid;
+    place-items: center;
+  }
+  .sctn4 .form .singlePerson .type-list .goBack {
+    margin-bottom: 1.5rem;
+  }
+  .sctn4 .form .singlePerson .type-list .goBack .arrow {
+    width: 2rem;
+    height: 2rem;
+  }
+  .sctn4 .form .singlePerson .type-list .list-people {
+    width: 95%;
+    margin-bottom: 0.75rem;
+  }
+  .sctn4 .form .singlePerson .type-list .list-name {
+    display: grid;
+    place-items: center;
+    gap: 1.25rem;
+  }
+  .sctn4 .form .singlePerson .type-list .list-name .guest1 {
+    font-size: 1rem;
+    height: 2rem;
+    width: 15.35rem;
+  }
+  .sctn4 .form .singlePerson .type-list .btn-confirm {
+    all: unset;
+    margin-top: 2rem;
+    width: 70%;
+    font-size: 1.25rem;
+    padding: 0.75rem 1rem;
+  }
+  .sctn4 .form .singlePerson .lst-hide {
+    display: none;
+  }
+  .sctn4 .flower-container-2 {
+    width: 10%;
+    bottom: -10%;
+    left: 5%;
+  }
+  .sctn4 .sctn-2_flowers {
+    width: 28%;
+    bottom: 0;
+    right: -4%;
+  }
+  .sctn4 .up_flower {
+    width: 65%;
+    top: 5%;
+    right: -43%;
+  }
+  .sctn4 .veryPink {
+    width: 40%;
+    right: -30%;
+    bottom: -2%;
+  }
+  .sctn4 .veryPink2 {
+    width: 60%;
+    left: -5%;
+    bottom: 2%;
+  }
+  .sctn4 .veryPink3 {
+    width: 50%;
+    left: -20%;
+    top: 2%;
+  }
+  .sctn4 .veryPink4 {
+    width: 50%;
     right: -20%;
     top: -2%;
   }
