--- a/src/style/sass/main_components/section2.scss
+++ b/src/style/sass/main_components/section2.scss
@@ -178,7 +178,7 @@
         .container-2{   
             .sub-content{
                 .couple{
-                    width: 93%;
+                    // width: 105%;
                 }
                 .star{
                     top: 61.35%;
@@ -197,7 +197,7 @@
         .container-2{   
             .sub-content{
                 .couple{
-                    width: 85%;
+                    width: 95%;
                 }
                 .star{
                     top: 61%;
