--- a/src/style/sass/main_components/section3.scss
+++ b/src/style/sass/main_components/section3.scss
@@ -365,7 +365,7 @@
                     // background-color: #af415375;
                     font-weight: 300;
                     text-align: center;
-                    font-size: 1.75rem;
+                    // font-size: 1.75rem;
                 }
         
                 .half{
@@ -409,7 +409,7 @@
     
                 .lluviaTitle{ 
                     margin-bottom: .75rem;
-                    font-size: 1.75rem;
+                    font-size: 1.5rem;
                 }
                 .lluviaText{
                     font-weight: 300;
